--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,3 +23,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - run: |
+          cd blog && deno task build && cd -
+          mv blog/_site/* ./
+          rm -rf blog
